--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-.ipynb_checkpoints
+ipynb_checkpoints
 SUBMISSION
-.DS_Stor
-.ipynb_checkpointse
+DS_Store
+ipynb_checkpointse
 ~$QVI_transaction_data.xlsx
